About page had a flex wrap issue and footer has been made unsticky for mobile devices

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -34,11 +34,15 @@
   @media screen and (max-width: 786px) {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-wrap: wrap;
   }
   a {
     text-decoration: none;
     color: black;
+    @media screen and (max-width: 786px) {
+      width: 50%;
+    }
   }
   .links {
     padding: 10px;
@@ -157,4 +161,9 @@
 .adeuxPhoto {
   @extend .aboutPhoto;
   margin-top: 1em;
+  @media screen and (min-width: 1300px) {
+    width: 30%;
+    float: left;
+    margin-right: 1em;
+  }
 }
