--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -2,6 +2,9 @@
   background-color: rgba($color: #000000, $alpha: 0.64); 
   display: flex;
   position: sticky; 
+  @media screen and (max-width: 786px){
+    position: relative;
+  }
   left: 0 ; right: 0; bottom: 0; 
   height: 10vh; 
   align-items: center;
